@@ -15,6 +15,7 @@
  *
  * Signals that you can add callbacks for are:
  * @li @c "clicked" - the user clicked the empty space in the menu to dismiss.
+ * @li @c "dismissed" - the user clicked the empty space in the menu to dismiss (since 1.8)
  *
  * Default content parts of the menu items that you can use for are:
  * @li @c "default" - A main content of the menu item
